--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,35 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_marginLeft="8dp"
-              android:layout_marginRight="8dp"
-              android:orientation="vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/country_name_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="@string/country"
-        android:textAppearance="?android:textAppearanceLarge"
-        android:textColor="@android:color/black"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorDelete"
+        android:gravity="end"
+        android:id="@+id/view_background"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/language_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="@string/languages"
-        android:textAppearance="?android:textAppearanceSmall"
-        android:textColor="@android:color/black"/>
+        <ImageView
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_delete"/>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/currency_textview"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="@string/currencies"
-        android:textAppearance="?android:textAppearanceSmall"
-        android:textColor="@android:color/black"/>
-</LinearLayout>
+        android:background="@android:color/white"
+        android:gravity="center_vertical"
+        android:id="@+id/view_foreground"
+        android:orientation="vertical"
+        android:padding="8dp">
+
+        <TextView
+            android:id="@+id/country_name_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/country"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:textColor="@android:color/black"/>
+
+        <TextView
+            android:id="@+id/language_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="@string/languages"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:textColor="@android:color/black"/>
+
+        <TextView
+            android:id="@+id/currency_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="@string/currencies"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:textColor="@android:color/black"/>
+    </LinearLayout>
+</FrameLayout>
